sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: value +=- is not a member of Int
    else if(plusPetit(i,i-1)){echange(i-1,i);i+=-1;}
                                              ^